--- a/vit-financas/package.json
+++ b/vit-financas/package.json
@@ -9,11 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@quasar/extras": "^1.16.16",
+    "axios": "^1.7.9",
+    "pinia": "^2.3.1",
+    "quasar": "^2.17.7",
+    "vee-validate": "^4.15.0",
+    "vue": "^3.5.13",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.9.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "sass-embedded": "^1.83.4",
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
     "vue-tsc": "^2.2.0"
