--- a/vit-financas/package.json
+++ b/vit-financas/package.json
@@ -15,6 +15,7 @@
     "quasar": "^2.17.7",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
