--- a/vit-financas/package.json
+++ b/vit-financas/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.16",
+    "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "quasar": "^2.17.7",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-apexcharts": "^1.8.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
